<resources>
    <string name="app_name">GPS Walk Tracker</string>

    //Navigation
    <string name="title_home">Home</string>
    <string name="list_trackers">List trackers</string>
    <string name="title_settings">Settings</string>

    //Preference
    <string name="update_time">Mode</string>
    <string name="update_time_key">update_time_key</string>
    <string name="update_time_summary">Mode set</string>
    <string name="track_color">Track color</string>
    <string name="track_color_key">track_color_key</string>
    <string name="track_color_summary">Choose track color</string>
    <string name="location_title">Location</string>
    <string name="default_time">3000</string>
    <string name="default_color">#FF000000</string>
    <string name="osm_pref_key">osm_pref_key</string>

    //Dialogs
    <string name="location_ermission_eeded">Location Permission Needed</string>
    <string name="this_app_needs_the_Location_permission">This app needs the Background Location Permission , please accept to use Background location functionality</string>
    <string name="ok">OK</string>
    <string name="no">NO</string>
    <string name="is_gps_enabled">Do you want gps enabled</string>
    <string name="gps_disabled">GPS disabled</string>
    <string name="content_description">content description</string>
    <string name="tv_time">Time 00:00:00</string>
    <string name="tv_average_speed">average speed 7 km//h</string>
    <string name="tv_speed">speed 3 km//h</string>
    <string name="tv_distanse">distanse 15 km</string>
    <string name="notification_permission">Notification Permission</string>
    <string name="notification_permission_is_required">Notification permission is required, Please allow notification permission from setting</string>
    <string name="notification_permission_granted">notification permission granted</string>
    <string name="distanse">Distance</string>
    <string name="average_speed">Average Speed</string>
    <string name="speed">Speed</string>
    <string name="_m">m</string>
    <string name="km_h">km//h</string>
    <string name="save_this_treck">Save this treck</string>
    <string name="yes">yes</string>
    <string name="to_show_notification">Notification permission is required, to show notification</string>
    <string name="alert">Alert</string>
    <string name="time">Time :</string>
    <string name="date">3/12/23</string>
</resources>