<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="2dp"
    android:elevation="4dp"
    app:cardCornerRadius="12dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/update_time_summary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"

            android:layout_marginEnd="16dp"
            android:text="@string/distanse"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/tv_data"
            app:layout_constraintTop_toBottomOf="@+id/tv_data"
            app:srcCompat="@drawable/baseline_av_timer"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/update_time"
            app:layout_constraintBottom_toBottomOf="@+id/iv_time"
            app:layout_constraintStart_toEndOf="@+id/iv_time"
            app:layout_constraintTop_toTopOf="@+id/iv_time" />

        <ImageView
            android:id="@+id/iv_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_data"
            app:layout_constraintTop_toBottomOf="@+id/iv_time"
            app:srcCompat="@drawable/baseline_speed"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/average_speed"
            app:layout_constraintBottom_toBottomOf="@+id/iv_speed"
            app:layout_constraintStart_toEndOf="@+id/iv_speed"
            app:layout_constraintTop_toTopOf="@+id/iv_speed" />

        <ImageView
            android:id="@+id/iv_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/iv_speed"
            app:layout_constraintEnd_toEndOf="@+id/tv_distance"
            app:layout_constraintStart_toStartOf="@+id/tv_distance"
            app:layout_constraintTop_toTopOf="@+id/iv_time"
            app:srcCompat="@drawable/baseline_delete_sweep"
            tools:ignore="ContentDescription" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>